# shiny_ch

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: convert_to_parquet.py
